jaeger/collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  labels:
    app: jaeger-collector
spec:
  selector:
    app: jaeger-collector
  ports:
    - port: 14250
      targetPort: 14250
