jaeger/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  labels:
    app: jaeger-query
spec:
  selector:
    app: jaeger-query
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: health
      port: 16687
      targetPort: 16687
