jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - name: grpc
      port: 4317
      targetPort: 4317
    - name: http
      port: 4318
      targetPort: 4318
    - name: configs
      port: 5778
      targetPort: 5778
    - name: ui
      port: 16686
      targetPort: 16686
